[project]
name = "lsq"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "datasets>=4.5.0",
    "ipdb>=0.13.13",
    "ipykernel>=6.31.0",
    "jupyter>=1.1.1",
    "loguru>=0.7.3",
    "omegaconf>=2.3.1",
    "pandas>=2.3.3",
    "pillow>=11.3.0",
    "timm>=1.0.27",
    "torch==2.5.1",
    "tqdm>=4.68.3",
]
